dist/LineScript-win64-20260616/tests/cases/compile_fail/class_unknown_field.lsc
class A do
  declare x: i64 = 0
end

main() -> i64 do
  declare a = A()
  a.y = 1
  return 0
end
